--- a/미니구현/탁구게임/index.html
+++ b/미니구현/탁구게임/index.html
@@ -35,7 +35,7 @@
             <p>Use the buttons below to keep score.</p>
 
             <div class="scoreChoice">
-                Playing To
+                <span>Playing To</span>
                 <div class="dropdown">
                     <select id="winValue">
                         <option value="3">3</option>
